-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: openjdk8u292, 11, 12, 13
-
Component/s: hotspot
-
b09
-
aarch64
-
generic
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8221576 | 12.0.2 | Andrew Haley | P4 | Resolved | Fixed | b02 |
| JDK-8256599 | 11.0.11-oracle | Dukebot | P4 | Resolved | Fixed | b01 |
| JDK-8221469 | 11.0.4 | Andrew Haley | P4 | Resolved | Fixed | b01 |
| JDK-8368287 | openjdk8u482 | Andrew Haley | P4 | Resolved | Fixed | b01 |
| JDK-8372219 | shenandoah8u482 | Andrew Haley | P4 | Resolved | Fixed | master |
| JDK-8332881 | 8u431 | Fairoz Matte | P4 | Resolved | Fixed | b01 |
we had run -Xcomp tests on aarch64 and got SIGSEGV in StubRoutines::generic_arraycopy (debug build).
generate_generic_copy:
rscratch2_dst_klass = rscratch2 = r9
It uses
MacroAssembler::check_klass_subtype_slow_path
which overwrites rscratch2 in debug build.
- backported by
-
JDK-8221469 AArch64: Register corruption in slow subtype check
-
- Resolved
-
-
JDK-8221576 AArch64: Register corruption in slow subtype check
-
- Resolved
-
-
JDK-8256599 AArch64: Register corruption in slow subtype check
-
- Resolved
-
-
JDK-8332881 AArch64: Register corruption in slow subtype check
-
- Resolved
-
-
JDK-8368287 AArch64: Register corruption in slow subtype check
-
- Resolved
-
-
JDK-8372219 AArch64: Register corruption in slow subtype check
-
- Resolved
-
- duplicates
-
JDK-8218670 aarch64: Register clash in debug build
-
- Closed
-
-
JDK-8371084 jdk8 on aarch64 in fastdebug can not (and could not) compile scala v2.13.17 - SIGSEV in compiler
-
- Closed
-
- links to
-
Commit(master)
openjdk/jdk8u-dev/26a41cde
-
Review(master)
openjdk/jdk8u-dev/700