8219006: AArch64: Register corruption in slow subtype check

Reviewed-by: adinn